Fixes issue on IE where selected button was not right colour

--- a/static/facebook-components-vote-1.0.css
+++ b/static/facebook-components-vote-1.0.css
@@ -37,7 +37,6 @@
     background: -o-linear-gradient(top, #fcfcfc 0%, #e4e4e4 100%); /* Opera 11.10+ */
     background: -ms-linear-gradient(top, #fcfcfc 0%, #e4e4e4 100%); /* IE10+ */
     background: linear-gradient(to bottom, #fcfcfc 0%, #e4e4e4 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#fcfcfc', endColorstr = '#e4e4e4', GradientType = 0); /* IE6-9 */
 
     border-radius: 3px;
     cursor: pointer;
